replace threads to virtual