@@ -20,17 +20,17 @@ public class InlineChequeHandler implements Client.ResultHandler {
     private final ScheduledExecutorService pollingService;
     @Setter
     private Client client;
+    private final FutureClient futureClient;
+
 
     private class ChequePollingTask implements Runnable {
         private final static int ACTIVATED_URL_LENGTH = 34;
         private final long messageId;
         private final long chatId;
-        private final FutureClient syncClient;
 
         ChequePollingTask(long chatId, long messageId) {
             this.messageId = messageId;
             this.chatId = chatId;
-            this.syncClient = new FutureClient(client);
         }
         private static boolean isActivated(String url) {
             return url.length() == ACTIVATED_URL_LENGTH;
@@ -38,7 +38,7 @@ public class InlineChequeHandler implements Client.ResultHandler {
 
         public void run() {
             try {
-                TdApi.Object result = syncClient.execute(new TdApi.GetMessage(chatId, messageId)).get();
+                TdApi.Object result = futureClient.execute(new TdApi.GetMessage(chatId, messageId)).get();
                 TdApi.InlineKeyboardButton button = ((TdApi.ReplyMarkupInlineKeyboard) ((TdApi.Message) result).replyMarkup).rows[0][0];
                 if (!isChequeCreatingButton(button)) {
                     String url = ((TdApi.InlineKeyboardButtonTypeUrl) button.type).url;
@@ -60,7 +60,8 @@ public class InlineChequeHandler implements Client.ResultHandler {
     public InlineChequeHandler(Cryptobot cryptobot) {
         this.cryptobot = cryptobot;
         this.pollingService = Executors.newSingleThreadScheduledExecutor();
-        this.threadPool = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+        this.futureClient = new FutureClient(client);
+        this.threadPool = Executors.newVirtualThreadPerTaskExecutor();
     }
 
     private boolean isViaCryptobot(TdApi.Message message) {
@@ -86,47 +87,53 @@ public class InlineChequeHandler implements Client.ResultHandler {
         return null;
     }
 
-
-    private void onUpdate(TdApi.Object update) {
-        switch (update.getConstructor()) {
-            case TdApi.UpdateNewMessage.CONSTRUCTOR -> {
-                TdApi.Message message = ((TdApi.UpdateNewMessage) update).message;
-                if (isViaCryptobot(message) &&
-                        message.replyMarkup != null) {
-                    TdApi.InlineKeyboardButton button = ((TdApi.ReplyMarkupInlineKeyboard) message.replyMarkup).rows[0][0];
-                    if (isChequeCreatingButton(button)) {
-                        ScheduledFuture<?> pollingFuture = pollingService.scheduleAtFixedRate(new ChequePollingTask(message.chatId, message.id),
-                                0,
-                                CHEQUE_POLLING_PERIOD_MILLIS,
-                                TimeUnit.MILLISECONDS);
-                        pollingService.schedule(() -> {
-                            pollingFuture.cancel(true);
-                        }, CHEQUE_POLLING_TIMEOUT_S, TimeUnit.SECONDS);
-                    } else {
-                        String chequeId = extractChequeId(((TdApi.InlineKeyboardButtonTypeUrl) button.type).url);
-                        if (chequeId != null) {
-                            cryptobot.activate(chequeId);
-                        }
-                    }
+    private void handleNewMessage(TdApi.UpdateNewMessage updateNewMessage) {
+        TdApi.Message message = updateNewMessage.message;
+        if (isViaCryptobot(message) &&
+                message.replyMarkup != null) {
+            TdApi.InlineKeyboardButton button = ((TdApi.ReplyMarkupInlineKeyboard) message.replyMarkup).rows[0][0];
+            if (isChequeCreatingButton(button)) {
+                ScheduledFuture<?> pollingFuture = pollingService.scheduleAtFixedRate(new ChequePollingTask(message.chatId, message.id),
+                        0,
+                        CHEQUE_POLLING_PERIOD_MILLIS,
+                        TimeUnit.MILLISECONDS);
+                pollingService.schedule(() -> {
+                    pollingFuture.cancel(true);
+                }, CHEQUE_POLLING_TIMEOUT_S, TimeUnit.SECONDS);
+            } else {
+                String chequeId = extractChequeId(((TdApi.InlineKeyboardButtonTypeUrl) button.type).url);
+                if (chequeId != null) {
+                    cryptobot.activate(chequeId);
                 }
             }
-            case TdApi.UpdateMessageEdited.CONSTRUCTOR -> {
-                TdApi.ReplyMarkup replyMarkup = ((TdApi.UpdateMessageEdited) update).replyMarkup;
-                if (replyMarkup != null && replyMarkup.getConstructor() == TdApi.ReplyMarkupInlineKeyboard.CONSTRUCTOR) {
-                    String chequeId = extractChequeId(((TdApi.InlineKeyboardButtonTypeUrl) ((TdApi.ReplyMarkupInlineKeyboard) replyMarkup).
-                            rows[0][0].type)
-                            .url);
-                    if (chequeId != null) {
-                        cryptobot.activate(chequeId);
-                    }
-                }
+        }
+    }
+
+    private void handleMessageEdited(TdApi.UpdateMessageEdited updateMessageEdited) {
+        TdApi.ReplyMarkup replyMarkup = updateMessageEdited.replyMarkup;
+        if (replyMarkup != null && replyMarkup.getConstructor() == TdApi.ReplyMarkupInlineKeyboard.CONSTRUCTOR) {
+            String chequeId = extractChequeId(((TdApi.InlineKeyboardButtonTypeUrl) ((TdApi.ReplyMarkupInlineKeyboard) replyMarkup).
+                    rows[0][0].type)
+                    .url);
+            if (chequeId != null) {
+                cryptobot.activate(chequeId);
             }
         }
     }
 
     @Override
     public void onResult(TdApi.Object update) {
-        threadPool.submit(() -> onUpdate(update));
+        switch (update.getConstructor()) {
+            case TdApi.UpdateNewMessage.CONSTRUCTOR -> {
+                TdApi.UpdateNewMessage updateNewMessage = (TdApi.UpdateNewMessage) update;
+                threadPool.submit(() -> handleNewMessage(updateNewMessage));
+            }
+            case TdApi.UpdateMessageEdited.CONSTRUCTOR -> {
+                TdApi.UpdateMessageEdited updateMessageEdited = (TdApi.UpdateMessageEdited) update;
+                threadPool.submit(() -> handleMessageEdited(updateMessageEdited));
+            }
+        }
     }
+
 }
 
